Added map fragment to same fragment as current friends. Deleted a few things as well

--- a/BattleBuddies/src/main/res/layout/fragment_edit_details.xml
+++ b/BattleBuddies/src/main/res/layout/fragment_edit_details.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.parse.starter.ViewControllers.TrainerViewController">
+    tools:context="com.parse.starter.AppViewControllers.TrainerViewController">
 
     <ListView
         android:layout_width="match_parent"
