--- a/BattleBuddies/src/main/res/layout/activity_login_view.xml
+++ b/BattleBuddies/src/main/res/layout/activity_login_view.xml
@@ -15,7 +15,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".ViewControllers.LoginController"
+                tools:context=".AppViewControllers.LoginController"
     android:background="#3a8f3e">
 
     <TextView
