--- a/BattleBuddies/src/main/res/layout/fragment_calories.xml
+++ b/BattleBuddies/src/main/res/layout/fragment_calories.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.parse.starter.ViewControllers.CurrentDetailsController">
+    tools:context="com.parse.starter.AppViewControllers.CurrentDetailsController">
 
     <TextView
         android:text="Enter Current Details"
