--- a/BattleBuddies/src/main/res/layout/fragment_current_clients.xml
+++ b/BattleBuddies/src/main/res/layout/fragment_current_clients.xml
@@ -4,7 +4,7 @@
     android:id="@+id/current_client_fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.parse.starter.ViewControllers.TrainerViewController"
+    tools:context="com.parse.starter.AppViewControllers.TrainerViewController"
     android:background="#3a8f3e">
 
     <LinearLayout
