--- a/BattleBuddies/src/main/res/layout/activity_trainer_view.xml
+++ b/BattleBuddies/src/main/res/layout/activity_trainer_view.xml
@@ -4,7 +4,7 @@
     android:id="@+id/trainer_view"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context="com.parse.starter.AppViewControllers.TrainerViewController"
+    tools:context="com.parse.starter.ViewControllers.TrainerViewController"
     android:background="#3a8f3e">
 
     <FrameLayout
