--- a/BattleBuddies/src/main/res/layout/fragment_home.xml
+++ b/BattleBuddies/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/home_fragment_container"
-    tools:context="com.parse.starter.AppViewControllers.TrainerViewController">
+    tools:context="com.parse.starter.ViewControllers.TrainerViewController">
 
     <GridLayout
         android:id="@+id/GridLayout1"
