--- a/BattleBuddies/src/main/res/layout/list_layout_current_friends.xml
+++ b/BattleBuddies/src/main/res/layout/list_layout_current_friends.xml
@@ -5,39 +5,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout android:id="@+id/thumbnail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="3dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="5dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical">
 
-    <ConfigClasses.MyProfilePictureView
-        android:id="@+id/imageView3"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
-        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
+        <LinearLayout android:id="@+id/thumbnail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="5dp">
 
-    </LinearLayout>
+            <ConfigClasses.MyProfilePictureView
+                android:id="@+id/imageView3"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
 
-    <TextView
-        android:id="@+id/current_client_text_view_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/thumbnail"
-        android:layout_toRightOf="@+id/thumbnail"
-        android:textSize="20sp"
-        android:text="New Text"
-        android:textStyle="bold"/>
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/current_client_object_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/current_client_text_view_name"
-        android:textSize="15sp"
-        android:text="New Text"
-        android:layout_toRightOf="@+id/thumbnail"/>
+        <TextView
+            android:id="@+id/current_client_text_view_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/thumbnail"
+            android:layout_toRightOf="@+id/thumbnail"
+            android:layout_marginTop="5dp"
+            android:textSize="15sp"
+            android:text="New Text"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/current_client_object_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/current_client_text_view_name"
+            android:textSize="12sp"
+            android:text="New Text"
+            android:layout_toRightOf="@+id/thumbnail"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="5dp"
+            android:paddingRight="5dp"
+            android:id="@+id/distanceLabel"
+            android:text="Distance"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
