--- a/BattleBuddies/src/main/res/layout/fragment_profile.xml
+++ b/BattleBuddies/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -26,27 +27,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <ImageButton
+                    android:id="@+id/edit_or_save_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@null"
+                    app:srcCompat="@drawable/ic_edit_button" />
+
                 <ConfigClasses.MyProfilePictureView
                     android:id="@+id/profile_picture"
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp">
+                    android:layout_marginTop="20dp">
                 </ConfigClasses.MyProfilePictureView>
 
-                <TextView
+                <EditText
                     android:text="Name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/profile_picture"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="20dp"
                     android:id="@+id/nameTV"
                     android:textSize="20sp"
                     android:textColor="#FFF"
-                    android:fontFamily="sans-serif-condensed" />
+                    android:fontFamily="sans-serif-condensed"
+                    android:background="@null"/>
 
-                <TextView
+                <EditText
                     android:text="Location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -56,7 +69,8 @@
                     android:id="@+id/locationTV"
                     android:textSize="20sp"
                     android:textColor="#FFF"
-                    android:fontFamily="sans-serif-condensed" />
+                    android:fontFamily="sans-serif-condensed"
+                    android:background="@null"/>
 
                 <Button
                     android:text="Logout"
