Refactored UI and other tweaks

--- a/BattleBuddies/src/main/res/layout/fragment_current_friends.xml
+++ b/BattleBuddies/src/main/res/layout/fragment_current_friends.xml
@@ -5,7 +5,7 @@
     android:id="@+id/current_client_fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3a8f3e">
+    android:background="@color/palette_darkwhite">
 
     <LinearLayout
     android:layout_width="match_parent"
