--- a/BattleBuddies/src/main/res/layout/list_layout_current_friends.xml
+++ b/BattleBuddies/src/main/res/layout/list_layout_current_friends.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/palette_lightwhite">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -34,8 +35,7 @@
             android:layout_toRightOf="@+id/thumbnail"
             android:layout_marginTop="5dp"
             android:textSize="15sp"
-            android:text="New Text"
-            android:textStyle="bold" />
+            android:text="New Text" />
 
         <TextView
             android:id="@+id/current_client_object_id"
@@ -54,8 +54,7 @@
             android:paddingRight="5dp"
             android:id="@+id/distanceLabel"
             android:text="Distance"
-            android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:textSize="15sp" />
 
     </RelativeLayout>
 
