--- a/BattleBuddies/src/main/res/values/colors.xml
+++ b/BattleBuddies/src/main/res/values/colors.xml
@@ -8,9 +8,9 @@
   <color name="palette_darkprimarycolor">#388d3c</color>
   <color name="palette_primarycolor">#4bae4f</color>
   <color name="palette_lightprimarycolor">#c6e4c7</color>
-  <color name="palette_texticonscolor">#fdfdfd</color>
+  <color name="palette_lightwhite">#fdfdfd</color>
   <color name="palette_accentcolor">#009587</color>
   <color name="palette_primarytextcolor">#212121</color>
   <color name="palette_secondarytextcolor">#747474</color>
-  <color name="palette_dividercolor">#bcbcbc</color>
+  <color name="palette_darkwhite">#e1e1e1</color>
 </resources>
