Added list view, switching to new branch now

--- a/BattleBuddies/src/main/res/layout/fragment_current_friends.xml
+++ b/BattleBuddies/src/main/res/layout/fragment_current_friends.xml
@@ -36,19 +36,42 @@
             app:el_expanded="true"
             app:el_parallax="0.5">
 
-            <android.support.v4.widget.SwipeRefreshLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/swipeContainer"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <ListView
-                    android:layout_width="fill_parent"
-                    android:layout_height="match_parent"
-                    android:layout_centerHorizontal="true"
-                    android:id="@+id/current_client_list_view" />
+                <android.support.v4.widget.SwipeRefreshLayout
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/swipeContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
 
-            </android.support.v4.widget.SwipeRefreshLayout>
+                    <ListView
+                        android:layout_width="fill_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/current_client_list_view" />
+
+                </android.support.v4.widget.SwipeRefreshLayout>
+
+                <android.support.v4.widget.SwipeRefreshLayout
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/swipeContainer2"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
+
+                    <ListView
+                        android:layout_width="fill_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/friends_with_your_location_list_view" />
+
+                </android.support.v4.widget.SwipeRefreshLayout>
+
+            </LinearLayout>
 
         </net.cachapa.expandablelayout.ExpandableLayout>
 
