--- a/BattleBuddies/src/main/res/layout/fragment_profile.xml
+++ b/BattleBuddies/src/main/res/layout/fragment_profile.xml
@@ -21,7 +21,7 @@
             android:id="@+id/profile_frame_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2">
+            android:layout_weight="3">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -29,8 +29,8 @@
 
                 <ConfigClasses.MyProfilePictureView
                     android:id="@+id/profile_picture"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp">
                 </ConfigClasses.MyProfilePictureView>
@@ -45,13 +45,28 @@
                     android:text="Change Photo"
                     android:textColor="@color/com_facebook_blue"/>
 
-                <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/profile_details_list_view"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_below="@id/change_photo_button"
-                    android:layout_above="@+id/logoutButton">
-                </ListView>
+                    android:layout_above="@+id/logoutButton"
+                    android:orientation="vertical">
+
+                    <ListView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:id="@+id/profile_details_list_view">
+                    </ListView>
+
+                    <ListView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:id="@+id/profile_friends_with_location_list_view">
+                    </ListView>
+
+                </LinearLayout>
 
                 <Button
                     android:text="Logout"
