--- a/BattleBuddies/src/main/res/layout/fragment_current_friends.xml
+++ b/BattleBuddies/src/main/res/layout/fragment_current_friends.xml
@@ -42,6 +42,15 @@
                 android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/emptyTextView"
+                    android:text="Not following anyone..."
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+
                 <android.support.v4.widget.SwipeRefreshLayout
                     xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/swipeContainer"
