--- a/BattleBuddies/src/main/res/layout/fragment_add_friends.xml
+++ b/BattleBuddies/src/main/res/layout/fragment_add_friends.xml
@@ -7,122 +7,144 @@
     android:layout_height="match_parent"
     android:background="@color/palette_darkwhite">
 
-    <RelativeLayout
-        android:id="@+id/relativelayout"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center_vertical"
-        android:background="@color/palette_lightwhite">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout android:id="@+id/thumbnail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="3dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginRight="5dp">
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/addFriendsMapViewFragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
+        </com.google.android.gms.maps.MapView>
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/add_friend_photo"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_vertical"
-                app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
-                app:civ_border_color="#FF000000"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/add_friend_name_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/thumbnail"
-            android:layout_toRightOf="@+id/thumbnail"
-            android:layout_marginTop="5dp"
-            android:textSize="15sp"
-            android:text="Name" />
-
-        <TextView
-            android:id="@+id/add_friend_phonenumber_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/add_friend_name_tv"
-            android:textSize="12sp"
-            android:text="Phone Number"
-            android:layout_toRightOf="@+id/thumbnail"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="5dp"
-            android:paddingRight="5dp"
-            android:id="@+id/add_friend_details_tv"
-            android:text="Details"
-            android:textSize="15sp" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/relativelayout"
-        android:background="@color/palette_lightwhite"
-        android:layout_marginTop="5dp">
-
-        <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
-            android:id="@+id/group_choices"
-            android:layout_centerHorizontal="true"
+        <RelativeLayout
+            android:id="@+id/relativelayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            app:tbgChildSpacing="auto"
-            app:tbgChildSpacingForLastRow="align"
-            app:tbgRowSpacing="8dp"
-            app:tbgCheckedButton="@+id/choice_a">
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/palette_lightwhite">
 
-            <com.nex3z.togglebuttongroup.button.LabelToggle
-                android:id="@+id/a"
+            <LinearLayout android:id="@+id/thumbnail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tag="1"
-                android:text="1 Hour"
-                android:textColor="@color/palette_primarytextcolor"
-                app:tbgMarkerColor="@color/palette_primarycolor"/>
+                android:padding="3dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginRight="5dp">
 
-            <com.nex3z.togglebuttongroup.button.LabelToggle
-                android:id="@+id/b"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/add_friend_photo"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
+                    app:civ_border_color="#FF000000"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/add_friend_name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tag="2"
-                android:text="4 Hours"
-                android:textColor="@color/palette_primarytextcolor"
-                app:tbgMarkerColor="@color/palette_primarycolor"/>
+                android:layout_alignTop="@+id/thumbnail"
+                android:layout_toRightOf="@+id/thumbnail"
+                android:layout_marginTop="5dp"
+                android:textSize="15sp"
+                android:text="Name" />
 
-            <com.nex3z.togglebuttongroup.button.LabelToggle
-                android:id="@+id/c"
+            <TextView
+                android:id="@+id/add_friend_phonenumber_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tag="3"
-                android:text="1 Day"
-                android:textColor="@color/palette_primarytextcolor"
-                app:tbgMarkerColor="@color/palette_primarycolor"/>
+                android:layout_below="@+id/add_friend_name_tv"
+                android:textSize="12sp"
+                android:text="Phone Number"
+                android:layout_toRightOf="@+id/thumbnail"/>
 
-            <com.nex3z.togglebuttongroup.button.LabelToggle
-                android:id="@+id/d"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="5dp"
+                android:paddingRight="5dp"
+                android:id="@+id/add_friend_details_tv"
+                android:text="Details"
+                android:textSize="15sp" />
+
+        </RelativeLayout>
+
+        <FrameLayout
+            android:id="@+id/profile_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/addfreindMapViewFragment"
+            android:background="@color/palette_lightwhite"
+            android:layout_marginTop="5dp">
+
+            <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
+                android:id="@+id/group_choices"
+                android:layout_centerHorizontal="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:tag="4"
-                android:text="Emergency Contact"
-                android:textColor="@color/palette_primarytextcolor"
-                app:tbgMarkerColor="@color/palette_primarycolor"/>
+                app:tbgChildSpacing="auto"
+                app:tbgChildSpacingForLastRow="align"
+                app:tbgRowSpacing="8dp"
+                app:tbgCheckedButton="@+id/choice_a">
 
-        </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
+                <com.nex3z.togglebuttongroup.button.LabelToggle
+                    android:id="@+id/a"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:tag="1"
+                    android:text="1 Hour"
+                    android:textColor="@color/palette_primarytextcolor"
+                    app:tbgMarkerColor="@color/palette_primarycolor"/>
 
-    </RelativeLayout>
+                <com.nex3z.togglebuttongroup.button.LabelToggle
+                    android:id="@+id/b"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:tag="2"
+                    android:text="4 Hours"
+                    android:textColor="@color/palette_primarytextcolor"
+                    app:tbgMarkerColor="@color/palette_primarycolor"/>
+
+                <com.nex3z.togglebuttongroup.button.LabelToggle
+                    android:id="@+id/c"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:tag="3"
+                    android:text="1 Day"
+                    android:textColor="@color/palette_primarytextcolor"
+                    app:tbgMarkerColor="@color/palette_primarycolor"/>
+
+                <com.nex3z.togglebuttongroup.button.LabelToggle
+                    android:id="@+id/d"
+                    android:layout_marginRight="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:tag="4"
+                    android:text="Emergency Contact"
+                    android:textColor="@color/palette_primarytextcolor"
+                    app:tbgMarkerColor="@color/palette_primarycolor"/>
+
+            </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
+
+         </RelativeLayout>
+
+        </FrameLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
